examples/passing/BlockString.purs
module Main where

foo :: String
foo = """foo"""

main = Debug.Trace.trace "Done"
