examples/failing/TopLevelCaseNoArgs.purs
module Main where
  foo :: Number
  foo = 1
  foo = 2
